Bug 1061414 - Fix VisualFrameWarning logic. r=milan

--HG--
extra : rebase_source : 238fd87657e3e82237f84bfe185d3088178b4c6d